Tue Oct  7 11:17:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_systmpdir): try user temporary directory by
	  confstr() on Mac OS X.
	  c.f. http://www.opensource.apple.com/source/ruby/ruby-104/patches/ext_etc_etc.c.diff

Tue Oct  7 10:48:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (struct stat.st_size): prefer off_t over int, long,
	  and so on.  inspired by
	  http://www.opensource.apple.com/source/ruby/ruby-104/patches/config.h.ed

Tue Oct  7 10:37:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_UNIVERSAL_ARCH): fix missing quoting
	  brackets.  incorporated from
	  http://www.opensource.apple.com/source/ruby/ruby-104/patches/configure.diff

Mon Oct  6 23:34:42 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_param.c: use typed data.

Mon Oct  6 22:37:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.h (struct RSymbol): move from internal.h.

Mon Oct  6 21:43:03 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c: update exception tree. [DOC]
	  reported by @hemge via twitter.

Mon Oct  6 18:43:03 2014  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: Fix typo. [Bug #9914]

Mon Oct  6 16:23:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (rb_f_kill): should not ignore signal unless the
	  default handler is registered.  [ruby-dev:48592] [Bug #9820]

Mon Oct  6 16:07:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_string.rb (test_LSHIFT_neary_long_max): enable
	  only on platforms where string size range is smaller than memory
	  space.  this test does not make sense but just wastes memory and
	  time on other platforms, as it is hardly possible that a string
	  size becomes neary LONG_MAX if long size equals pointer size.
	  [ruby-core:65410] [Bug #10325]

Mon Oct  6 11:21:21 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.rb: Adding/tweaking comments.
