@@ -1,3 +1,12 @@
+Tue Oct  7 21:40:17 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole_method.c: refactoring. add
+	  olemethod_data_get_struct to wrap Data_Get_Struct.
+	* ext/win32ole/win32ole_method.h: ditto.
+	
+	* ext/win32ole/win32ole_param.c (oleparam_ole_param):
+	  call olemethod_data_get_struct instead of Data_Get_Struct.
+
 Tue Oct  7 11:17:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/etc/etc.c (etc_systmpdir): try user temporary directory by
